Add more eslint rule, code review and fixes

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -41,7 +40,41 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {},
+    "rules": {
+      "curly": [2, "all"],
+      "indent": "off",
+      "newline-per-chained-call": "error",
+      "keyword-spacing": ["error", { "before": true , "after": true }],
+      "space-before-function-paren": ["error", "always"],
+      "space-before-blocks": "error",
+      "eqeqeq": ["error", "always"],
+      "space-infix-ops": "error",
+      "comma-spacing": ["error", { "before": false, "after": true }],
+      "brace-style": "error",
+      "key-spacing": ["error", { "beforeColon": false }],
+      "no-constant-condition": "error",
+      "no-unneeded-ternary": "error",
+      "no-whitespace-before-property": "error",
+      "arrow-parens": "off",
+      "comma-dangle": "off",
+      "generator-star-spacing": "off",
+      "max-len": ["error", { "code": 120 }],
+      "no-mixed-operators": "off",
+      "vue/order-in-components": "error",
+      "vue/script-indent": ["error", 4, {
+        "baseIndent": 1
+      }],
+      "vue/html-indent": ["error", 4],
+      "vue/singleline-html-element-content-newline": "off",
+      "prefer-template": "error",
+      "vue/max-attributes-per-line": ["error", {
+        "singleline": 3,
+        "multiline": {
+          "max": 1,
+          "allowFirstLine": false
+        }
+      }]
+    },
     "overrides": [
       {
         "files": [
